--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["nextjs", "tailwindcss", "velite", "Velite"]
+  "cSpell.words": ["lucide", "nextjs", "tailwindcss", "velite", "Velite"]
 }
