--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["lucide", "nextjs", "tailwindcss", "velite", "Velite"]
+  "cSpell.words": [
+    "esnext",
+    "lucide",
+    "nextjs",
+    "tailwindcss",
+    "velite",
+    "Velite"
+  ]
 }
