--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,11 @@
     "boder",
     "esnext",
     "isodate",
+    "jsdevtools",
     "lucide",
+    "mdast",
     "nextjs",
+    "Pluggable",
     "rehype",
     "tailwindcss",
     "unist",
