--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
@@ -23,10 +24,12 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
+    "@jsdevtools/rehype-toc": "^3.0.2",
     "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/probe-image-size": "^7.2.4",
@@ -39,6 +42,7 @@
     "rehype-preset-minify": "^7.0.0",
     "rehype-pretty-code": "^0.13.2",
     "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "velite": "^0.1.0-rc.3"
