--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,28 @@
 {
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "always"
+  },
   "cSpell.words": [
     "boder",
+    "clsx",
+    "ecma",
     "esnext",
     "isodate",
     "jsdevtools",
     "lucide",
     "mdast",
     "nextjs",
+    "Parens",
     "Pluggable",
+    "precommit",
     "rehype",
     "tailwindcss",
     "unist",
