--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
+      "@/*": ["./src/*"],
+      "@public/*": ["./public/*"],
       "@site/content": ["./.velite"]
     }
   },
