formating tailwind config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,13 +17,17 @@
     "esnext",
     "isodate",
     "jsdevtools",
+    "knip",
+    "lintstagedrc",
     "lucide",
     "mdast",
     "nextjs",
+    "opengraph",
     "Parens",
     "Pluggable",
     "precommit",
     "rehype",
+    "shadcn",
     "tailwindcss",
     "unist",
     "velite",
