--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "lint-staged": "lint-staged",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "knip": "knip"
   },
   "dependencies": {
+    "@jsdevtools/rehype-toc": "^3.0.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -27,16 +29,20 @@
     "probe-image-size": "^7.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-preset-minify": "^7.0.0",
+    "rehype-pretty-code": "^0.13.2",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
-    "@jsdevtools/rehype-toc": "^3.0.2",
     "@tailwindcss/typography": "^0.5.13",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^20",
+    "@types/node": "^20.14.2",
     "@types/probe-image-size": "^7.2.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -45,23 +51,18 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "husky": "^9.0.11",
+    "knip": "^5.17.4",
     "lint-staged": "^15.2.5",
     "postcss": "^8",
     "prettier": "3.3.0",
     "prettier-plugin-tailwindcss": "^0.6.1",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-preset-minify": "^7.0.0",
-    "rehype-pretty-code": "^0.13.2",
-    "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
+    "typescript": "^5.4.5",
     "velite": "^0.1.0-rc.3"
   }
 }
