--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "prettier": "prettier --check --ignore-path .gitignore .",
+    "prettier:fix": "prettier --write --ignore-path .gitignore .",
+    "format": "npm run lint:fix && npm run prettier:fix && npm run knip",
     "lint-staged": "lint-staged",
     "precommit": "lint-staged",
     "knip": "knip"
@@ -33,15 +34,17 @@
     "probe-image-size": "^7.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^7.1.0",
-    "rehype-preset-minify": "^7.0.0",
+    "rehype-external-links": "^3.0.0",
     "rehype-pretty-code": "^0.13.2",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
-    "remark-unwrap-images": "^4.0.0",
+    "remark-smartypants": "^3.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "unified": "^11.0.4",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
@@ -56,6 +59,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "husky": "^9.0.11",
