--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-external-links": "^3.0.0",
+    "rehype-minify-whitespace": "^6.0.0",
     "rehype-pretty-code": "^0.13.2",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
