--- a/.editorconfig
+++ b/.editorconfig
@@ -12,11 +12,8 @@ trim_trailing_whitespace = true
 
 # Matches multiple files with brace expansion notation
 # Set default charset
-[*.{js,jsx,ts,tsx,json,html,css,scss,md}]
+[*.{ts,tsx,json,html,css,md}]
 charset = utf-8
-
-[{*.js,*.json}]
-insert_final_newline = true
 
 # Specific configuration for JSON files
 [*.json]
