feat: adding mdx features

--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "github-slugger": "^2.0.0",
+    "lru-cache": "^10.2.2",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
-    "probe-image-size": "^7.2.3",
     "react": "^18",
     "react-dom": "^18",
     "rehype-accessible-emojis": "^0.3.2",
@@ -43,6 +43,7 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-smartypants": "^3.0.1",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
@@ -53,7 +54,6 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.14.2",
-    "@types/probe-image-size": "^7.2.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
