--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@types/node-fetch": "^2.6.11",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "github-slugger": "^2.0.0",
     "lucide-react": "^0.379.0",
+    "mdast": "^3.0.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
@@ -54,6 +54,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.14.2",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
