feat: change style & improve image plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
     "knip",
     "lintstagedrc",
     "lucide",
+    "magicui",
     "mdast",
     "nextjs",
     "opengraph",
@@ -31,6 +32,7 @@
     "shadcn",
     "slugified",
     "tailwindcss",
+    "toploader",
     "trivago",
     "unist",
     "velite",
