--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12",
     "github-slugger": "^2.0.0",
+    "lru_map": "^0.4.1",
     "lucide-react": "^0.379.0",
     "mdast": "^3.0.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.12",
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
