--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,9 +13,13 @@
   "cSpell.words": [
     "boder",
     "clsx",
+    "deflist",
+    "Deflist",
     "dracula",
     "ecma",
     "esnext",
+    "hbsnow",
+    "hongvanpc",
     "isodate",
     "jsdevtools",
     "knip",
@@ -24,10 +28,13 @@
     "magicui",
     "mdast",
     "nextjs",
+    "nofollow",
+    "noopener",
+    "noreferrer",
+    "oembed",
     "opengraph",
     "Parens",
     "Pluggable",
-    "precommit",
     "rehype",
     "shadcn",
     "slugified",
