--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
     "lint:fix": "next lint --fix",
     "prettier": "prettier --check --ignore-path .gitignore .",
     "prettier:fix": "prettier --write --ignore-path .gitignore .",
+    "pre-commit": "lint-staged",
     "format": "npm run lint:fix && npm run prettier:fix && npm run knip",
-    "lint-staged": "lint-staged",
-    "precommit": "lint-staged",
     "knip": "knip"
   },
+  "lint-staged": {
+    "**/*.{ts,tsx,json,css,md,mdx}": [
+      "prettier --write",
+      "git add"
+    ],
+    "**/*.{ts,tsx,md,mdx}": [
+      "eslint --fix"
+    ]
+  },
   "dependencies": {
+    "@hbsnow/rehype-sectionize": "^1.0.7",
+    "@hongvanpc10/rehype-embed": "^1.0.21",
     "@jsdevtools/rehype-toc": "^3.0.2",
     "@next/bundle-analyzer": "^14.2.3",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -41,12 +51,13 @@
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-external-links": "^3.0.0",
-    "rehype-minify-whitespace": "^6.0.0",
     "rehype-pretty-code": "^0.13.2",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.0",
+    "remark-breaks": "^4.0.0",
+    "remark-deflist": "^1.0.0",
     "remark-smartypants": "^3.0.1",
     "sharp": "^0.33.4",
+    "shiki": "^1.10.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
@@ -60,14 +71,14 @@
     "@types/node-fetch": "^2.6.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/remark-oembed": "^1.2.4",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-mdx": "^3.1.5",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "husky": "^9.0.11",
     "knip": "^5.17.4",
     "lint-staged": "^15.2.5",
