feat: change architecture, style & improve seo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,8 @@
     "Pluggable",
     "rehype",
     "shadcn",
+    "shiki",
+    "shikijs",
     "slugified",
     "tailwindcss",
     "toploader",
