--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@remark-embedder/core": "^3.0.3",
-    "@remark-embedder/transformer-oembed": "^5.0.0",
+    "@shikijs/transformers": "^1.10.3",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -58,6 +58,7 @@
     "remark-breaks": "^4.0.0",
     "remark-deflist": "^1.0.0",
     "remark-smartypants": "^3.0.1",
+    "rss": "^1.2.2",
     "sharp": "^0.33.4",
     "shiki": "^1.10.0",
     "tailwind-merge": "^2.3.0",
@@ -73,6 +74,7 @@
     "@types/node-fetch": "^2.6.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/rss": "^0.0.32",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "eslint": "^8",
