--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,12 @@
       "@site/content": ["./.velite"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/scripts/rss.mjs"
+  ],
   "exclude": ["node_modules"]
 }
