fix: fixing styles issues

--- a/.prettierrc
+++ b/.prettierrc
@@ -7,6 +7,5 @@
   "tabWidth": 2,
   "trailingComma": "es5",
   "arrowParens": "avoid",
-  "endOfLine": "lf",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "endOfLine": "lf"
 }
