feat: add share btns & fix style

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_APP_URL = "https://my-portofolio-roan-three.vercel.app/"
+NEXT_PUBLIC_APP_URL = "https://my-portofolio-roan-three.vercel.app"
