--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lucide-react": "^0.379.0",
     "mdast": "^3.0.0",
     "next": "14.2.3",
+    "next-share": "^0.27.0",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
     "node-fetch": "^3.3.2",
@@ -58,7 +59,6 @@
     "sharp": "^0.33.4",
     "shiki": "^1.10.0",
     "tailwind-merge": "^2.3.0",
-    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.4",
     "unist-util-visit": "^5.0.0"
