--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "@jsdevtools/rehype-toc": "^3.0.2",
     "@next/bundle-analyzer": "^14.2.3",
     "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
@@ -35,6 +36,7 @@
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "framer-motion": "^11.2.12",
     "github-slugger": "^2.0.0",
     "lru_map": "^0.4.1",
@@ -44,7 +46,6 @@
     "next-share": "^0.27.0",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
-    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "rehype-accessible-emojis": "^0.3.2",
@@ -67,7 +68,6 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.14.2",
-    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/rss": "^0.0.32",
@@ -75,14 +75,12 @@
     "@typescript-eslint/parser": "^7.11.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "husky": "^9.0.11",
     "knip": "^5.17.4",
     "lint-staged": "^15.2.5",
     "postcss": "^8",
-    "prettier": "3.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5",
     "velite": "^0.1.0-rc.3"
