feat: adding projects and iframes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "ecma",
     "esnext",
     "facebook",
+    "giscus",
     "hbsnow",
     "hongvanpc",
     "instagram",
@@ -55,5 +56,8 @@
     "youtube"
   ],
   "css.lint.unknownAtRules": "ignore",
-  "typescript.enablePromptUseWorkspaceTsdk": true
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "[typescript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  }
 }
