--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "dependencies": {
     "@hbsnow/rehype-sectionize": "^1.0.7",
-    "@hongvanpc10/rehype-embed": "^1.0.21",
     "@jsdevtools/rehype-toc": "^3.0.2",
     "@next/bundle-analyzer": "^14.2.3",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -33,6 +32,8 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@shikijs/transformers": "^1.10.3",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -46,6 +47,7 @@
     "next-share": "^0.27.0",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "rehype-accessible-emojis": "^0.3.2",
@@ -55,6 +57,7 @@
     "rehype-slug": "^6.0.0",
     "remark-breaks": "^4.0.0",
     "remark-deflist": "^1.0.0",
+    "remark-mark-highlight": "^0.1.0",
     "remark-smartypants": "^3.0.1",
     "rss": "^1.2.2",
     "sharp": "^0.33.4",
@@ -68,6 +71,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.14.2",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/rss": "^0.0.32",
@@ -81,6 +85,7 @@
     "knip": "^5.17.4",
     "lint-staged": "^15.2.5",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5",
     "velite": "^0.1.0-rc.3"
